--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 591 records form elect_net_gen_solar.csv.\n",
+      "Loaded 591 records from elect_net_gen_solar.csv.\n",
       "          ElectNetGen\n",
       "Date                 \n",
       "2021 11      7873.778\n",
@@ -99,7 +99,7 @@
     "filename = os.path.basename(path)\n",
     "\n",
     "\n",
-    "print(f\"Loaded {len(df)} records form {filename}.\")\n",
+    "print(f\"Loaded {len(df)} records from {filename}.\")\n",
     "print(df.tail())"
    ]
   },
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yk/_g2wb8q55v9gmytn656hxt7h0000gp/T/ipykernel_76270/2223087393.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/yk/_g2wb8q55v9gmytn656hxt7h0000gp/T/ipykernel_95834/2223087393.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df.index = pd.to_datetime(df.index).to_period(\"M\")  # Specify months.\n"
      ]
     }
@@ -637,7 +637,7 @@
        "  <th>Date:</th>                  <td>Sat, 09 Nov 2024</td>       <th>  AIC                </th> <td>1037.375</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                      <td>14:03:06</td>           <th>  BIC                </th> <td>1048.398</td>\n",
+       "  <th>Time:</th>                      <td>17:51:24</td>           <th>  BIC                </th> <td>1048.398</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                   <td>01-31-2015</td>          <th>  HQIC               </th> <td>1041.737</td>\n",
@@ -691,7 +691,7 @@
        "\\textbf{Dep. Variable:}          &         ElectNetGen          & \\textbf{  No. Observations:  } &     80      \\\\\n",
        "\\textbf{Model:}                  & ARIMA(1, 1, 1)x(1, 1, 1, 12) & \\textbf{  Log Likelihood     } &  -513.687   \\\\\n",
        "\\textbf{Date:}                   &       Sat, 09 Nov 2024       & \\textbf{  AIC                } &  1037.375   \\\\\n",
-       "\\textbf{Time:}                   &           14:03:06           & \\textbf{  BIC                } &  1048.398   \\\\\n",
+       "\\textbf{Time:}                   &           17:51:24           & \\textbf{  BIC                } &  1048.398   \\\\\n",
        "\\textbf{Sample:}                 &          01-31-2015          & \\textbf{  HQIC               } &  1041.737   \\\\\n",
        "\\textbf{}                        &         - 08-31-2021         & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &             opg              & \\textbf{                     } &             \\\\\n",
@@ -728,7 +728,7 @@
        "Dep. Variable:                      ElectNetGen   No. Observations:                   80\n",
        "Model:             ARIMA(1, 1, 1)x(1, 1, 1, 12)   Log Likelihood                -513.687\n",
        "Date:                          Sat, 09 Nov 2024   AIC                           1037.375\n",
-       "Time:                                  14:03:06   BIC                           1048.398\n",
+       "Time:                                  17:51:24   BIC                           1048.398\n",
        "Sample:                              01-31-2015   HQIC                          1041.737\n",
        "                                   - 08-31-2021                                         \n",
        "Covariance Type:                            opg                                         \n",
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "3f6fd8b1-fe33-4a4d-ad78-af4d3a48e57d",
    "metadata": {},
    "outputs": [
@@ -1187,12 +1187,6 @@
     "- Following March 2022, the green line continued with the predicted power generation figures for the next year.\n",
     "- The model indicated that electrical energy generation from solar power would peak in the middle of 2022 at roughly 14,000 GWh, then dip to around 9,000 GWh at the end of the year before rising again in 2023. As in previous years, **solar power usage followed a seasonal but overall rising trend**."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eef05a16-7a72-4004-b7f5-d49e3acc4cfb",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
