Modify datetime. Add mixed format.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -31,6 +31,9 @@
     }
    ],
    "source": [
+    "import warnings  # Suppress warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "import datetime as dt  # Work with datetime types.\n",
     "import os  # Interact with the operating system.\n",
     "import sys  # Read system parameters.\n",
@@ -272,18 +275,10 @@
      "text": [
       "The Date index is now properly formatted.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/yk/_g2wb8q55v9gmytn656hxt7h0000gp/T/ipykernel_95834/2223087393.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df.index = pd.to_datetime(df.index).to_period(\"M\")  # Specify months.\n"
-     ]
     }
    ],
    "source": [
-    "df.index = pd.to_datetime(df.index).to_period(\"M\")  # Specify months.\n",
+    "df.index = pd.to_datetime(df.index, format=\"mixed\").to_period(\"M\")  # Specify months.\n",
     "df.head()\n",
     "print(\"The Date index is now properly formatted.\")"
    ]
@@ -634,10 +629,10 @@
        "  <th>Model:</th>           <td>ARIMA(1, 1, 1)x(1, 1, 1, 12)</td> <th>  Log Likelihood     </th> <td>-513.687</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                  <td>Sat, 09 Nov 2024</td>       <th>  AIC                </th> <td>1037.375</td>\n",
+       "  <th>Date:</th>                  <td>Sat, 07 Dec 2024</td>       <th>  AIC                </th> <td>1037.375</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                      <td>17:51:24</td>           <th>  BIC                </th> <td>1048.398</td>\n",
+       "  <th>Time:</th>                      <td>21:54:18</td>           <th>  BIC                </th> <td>1048.398</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                   <td>01-31-2015</td>          <th>  HQIC               </th> <td>1041.737</td>\n",
@@ -690,8 +685,8 @@
        "\\toprule\n",
        "\\textbf{Dep. Variable:}          &         ElectNetGen          & \\textbf{  No. Observations:  } &     80      \\\\\n",
        "\\textbf{Model:}                  & ARIMA(1, 1, 1)x(1, 1, 1, 12) & \\textbf{  Log Likelihood     } &  -513.687   \\\\\n",
-       "\\textbf{Date:}                   &       Sat, 09 Nov 2024       & \\textbf{  AIC                } &  1037.375   \\\\\n",
-       "\\textbf{Time:}                   &           17:51:24           & \\textbf{  BIC                } &  1048.398   \\\\\n",
+       "\\textbf{Date:}                   &       Sat, 07 Dec 2024       & \\textbf{  AIC                } &  1037.375   \\\\\n",
+       "\\textbf{Time:}                   &           21:54:18           & \\textbf{  BIC                } &  1048.398   \\\\\n",
        "\\textbf{Sample:}                 &          01-31-2015          & \\textbf{  HQIC               } &  1041.737   \\\\\n",
        "\\textbf{}                        &         - 08-31-2021         & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &             opg              & \\textbf{                     } &             \\\\\n",
@@ -727,8 +722,8 @@
        "========================================================================================\n",
        "Dep. Variable:                      ElectNetGen   No. Observations:                   80\n",
        "Model:             ARIMA(1, 1, 1)x(1, 1, 1, 12)   Log Likelihood                -513.687\n",
-       "Date:                          Sat, 09 Nov 2024   AIC                           1037.375\n",
-       "Time:                                  17:51:24   BIC                           1048.398\n",
+       "Date:                          Sat, 07 Dec 2024   AIC                           1037.375\n",
+       "Time:                                  21:54:18   BIC                           1048.398\n",
        "Sample:                              01-31-2015   HQIC                          1041.737\n",
        "                                   - 08-31-2021                                         \n",
        "Covariance Type:                            opg                                         \n",
